--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
         <h1>Welcome to Bidrah</h1>
         <p>Your hub for cutting-edge tech vlogs & tools</p>
         <a href="redlit.html" class="cta">Redlit</a>
+<a href="picsum.html" class="cta">Scroll fidget</a>
     </section>
 
     <!-- Content Section -->
