--- a/cliponpage.html
+++ b/cliponpage.html
@@ -16,13 +16,13 @@
       justify-content: center;
       height: 100vh;
       padding: 20px;
+      text-align: center;
     }
 
     #cliponText {
       font-size: 1.2rem;
       margin-bottom: 20px;
       word-break: break-word;
-      text-align: center;
     }
 
     button {
@@ -50,7 +50,8 @@
     fetch("https://script.google.com/macros/s/AKfycbzCHeqkMx3RtDUs4PP0HcAeSOjOXTdrgFa7kc4imK_RqeWnD9-aWZsLVUkK1AbcKg4T/exec")
       .then(response => response.json())
       .then(data => {
-        textContainer.textContent = data.clipon || "No data found.";
+        const cliponValue = data[0]?.clipon;
+        textContainer.textContent = cliponValue ? cliponValue : "No data found.";
       })
       .catch(error => {
         textContainer.textContent = "Failed to load.";
